# mbbank-mcp

./: Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docker-publish.yml  python-publish.yml
mbbank_mcp/: __init__.py  __main__.py  core.py
